# projeto_aed

./: CMakeLists.txt  README.md
Projeto/: CMakeLists.txt
Projeto/src/: Main.c  card.c  card.h  jogo  main.c  sdl_test
